--- a/css/style.css
+++ b/css/style.css
@@ -1,261 +1,2 @@
-:root {
-   --albumArt: url("../img/defaultArt.webp");
-}
-
-body {
-   background: var(--albumArt) no-repeat center center fixed;
-   background-size: cover;
-}
-
-/* Theme sombre ou clair */
-@media (prefers-color-scheme: dark) {
-   body {
-      backdrop-filter: blur(2rem) contrast(30%) brightness(90%);
-      -webkit-backdrop-filter: blur(2rem) contrast(30%) brightness(90%);
-   }
-}
-
-@media (prefers-color-scheme: light) {
-   body {
-      backdrop-filter: blur(2rem) contrast(30%) brightness(170%);
-      -webkit-backdrop-filter: blur(2rem) contrast(30%) brightness(170%);
-   }
-}
-
-/* Animation transition */
-.animated {
-   -webkit-animation-duration: 1s;
-   animation-duration: 1s;
-   -webkit-animation-fill-mode: both;
-   animation-fill-mode: both;
-}
-
-@-webkit-keyframes fadeIn {
-   0% {
-      opacity: 0;
-   }
-
-   100% {
-      opacity: 1;
-   }
-}
-
-@keyframes fadeIn {
-   0% {
-      opacity: 0;
-   }
-
-   100% {
-      opacity: 1;
-   }
-}
-
-.fadeIn {
-   -webkit-backface-visibility: visible !important;
-   -webkit-animation-name: fadeIn;
-   backface-visibility: visible !important;
-   animation-name: fadeIn;
-}
-
-#mainWrapper {
-   margin-top: 3.4rem;
-}
-
-#metadata {
-   height: calc(100vh - 3rem);
-   align-items: center;
-   justify-content: center;
-
-   .album-controls {
-      align-items: center;
-      justify-content: space-around;
-      align-content: center;
-      text-align: center;
-      display: flex;
-      height: 100%;
-   }
-}
-
-.metainfo {
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   justify-content: center;
-   >* {
-      min-height: 2rem;
-   }
-
-   h4#title {
-      font-weight: bold;
-   }
-}
-
-h1.siteName {
-   text-align: center;
-   line-height: 3rem;
-   font-size: 1.5rem;
-   margin: 0;
-}
-
-html,
-body {
-   overflow-x: hidden;
-}
-body {
-   padding: 0;
-   margin: 0;
-   font-family: Seravek, 'Gill Sans Nova', Ubuntu, Calibri, 'DejaVu Sans', source-sans-pro, sans-serif;
-}
-.top-item {
-   margin-top: 100px;
-}
-header {
-   margin: 0;
-   width: 100%;
-   background-color: rgba(0, 0, 0, 1);
-   position: sticky;
-   height: 3rem;
-   z-index: 20;
-   top: 0;
-   left: 0;
-}
-nav.stationNav {
-   height: calc(100vh - 3rem);
-   position: absolute;
-   left: -1px;
-   --stationWidth: clamp(20rem, 19.293rem + 3.008vw, 22rem);
-   width: var(--stationWidth);
-   transform: translateX(calc(-1 * var(--stationWidth)));
-   transition: transform 250ms ease-in-out;
-   border-left: 1px solid #eee;
-   background: rgba(0, 0, 0, .85);
-   padding-top: .5rem;
-   overflow-y: scroll;
-
-   label {
-      background: #333;
-      padding: .4rem .5rem .4rem 1rem;
-      font-size: clamp(1.2rem, 1.13rem + 0.348vw, 1.4rem);
-      transition: all 250ms ease-in-out;
-
-      &:nth-child(odd) {
-         background: #393939
-      }
-
-      &:has(input:checked) {
-         background: rgb(36, 27, 196);
-         background: linear-gradient(90deg, rgba(36, 27, 196, 1) 39%, rgba(146, 11, 181, 1) 90%);
-         padding: 1rem .5rem 1rem 2rem;
-         font-weight: 700;
-      }
-
-      input[type="radio"] {
-         display: none;
-      }
-   }
-}
-nav ul {
-   margin: 0;
-   padding: 0;
-   border-top: 1px solid #eee;
-}
-nav ul>li {
-   list-style: none;
-   color: #fff;
-   text-transform: uppercase;
-   font-weight: bold;
-   padding: 20px;
-   cursor: pointer;
-   border-bottom: 1px solid #eee;
-   transition: 0.25s;
-}
-nav ul>li span {
-   display: block;
-   font-size: 14px;
-   color: #353535;
-}
-nav ul>li a {
-   color: #353535;
-   text-transform: uppercase;
-   font-weight: bold;
-   cursor: pointer;
-   text-decoration: none;
-}
-nav ul>li:hover {
-   background-color: #dddddd;
-}
-input[type="checkbox"]:checked~nav.stationNav {
-   transform: translateX(0);
-   z-index: 40;
-}
-input[type="checkbox"] {
-   box-sizing: border-box;
-   display: none;
-   transition: all 0.25s;
-}
-.menuIconToggle {
-   box-sizing: border-box;
-   cursor: pointer;
-   position: absolute;
-   z-index: 40;
-   height: 100%;
-   width: 3rem;
-   top: 0;
-   left: 0;
-   transition: all 0.3s;
-   padding: 1rem .75rem .75rem;
-
-   &:hover, &:focus {
-      background: rgba(100, 100, 100, .5)
-   }
-}
-.hamb-line {
-   box-sizing: border-box;
-   position: absolute;
-   height: 3px;
-   width: 100%;
-   background-color: #fff;
-   transition: all 0.25s;
-}
-.hor {
-   transition: all 0.3s;
-   box-sizing: border-box;
-   position: relative;
-   float: left;
-   margin-top: 3px;
-}
-.dia.part-1 {
-   position: relative;
-   box-sizing: border-box;
-   float: left;
-   transition: all 0.25s;
-}
-.dia.part-2 {
-   box-sizing: border-box;
-   position: relative;
-   float: left;
-   margin-top: 3px;
-   transition: all 0.25s;
-}
-input[type="checkbox"]:checked~.menuIconToggle>.hor {
-   box-sizing: border-box;
-   opacity: 0;
-   transition: all 0.25s;
-}
-input[type="checkbox"]:checked~.menuIconToggle>.dia.part-1 {
-   box-sizing: border-box;
-   transform: rotate(135deg);
-   margin-top: 8px;
-   transition: all 0.25s;
-}
-input[type="checkbox"]:checked~.menuIconToggle>.dia.part-2 {
-   box-sizing: border-box;
-   transform: rotate(-135deg);
-   margin-top: -9px;
-   transition: all 0.25s;
-}
-@media screen and (max-width: 640px) {
-   nav.stationNav {
-      --stationWidth: 101vw;
-   }
-}
+:root{--albumArt:url("../img/defaultArt.png");--media-footer:8rem}body{background:var(--albumArt) no-repeat center center fixed;background-size:cover;overflow-y:hidden;max-height:100vh}@media (prefers-color-scheme:dark){body{backdrop-filter:blur(2rem) contrast(30%) brightness(90%);-webkit-backdrop-filter:blur(2rem) contrast(30%) brightness(90%)}}@media (prefers-color-scheme:light){body{backdrop-filter:blur(2rem) contrast(30%) brightness(170%);-webkit-backdrop-filter:blur(2rem) contrast(30%) brightness(170%)}}.animated{-webkit-animation-duration:1s;animation-duration:1s;-webkit-animation-fill-mode:both;animation-fill-mode:both}@-webkit-keyframes fadeIn{0%{opacity:0}to{opacity:1}}@keyframes fadeIn{0%{opacity:0}to{opacity:1}}.fadeIn{-webkit-backface-visibility:visible!important;-webkit-animation-name:fadeIn;backface-visibility:visible!important;animation-name:fadeIn}#mainWrapper{margin-top:3rem;position:relative;height:calc(100vh - 3rem)}#player{position:relative}#webamp{position:relative;top:-2rem}#metadata{height:calc(100vh - var(--media-footer) - 3rem)}#metadata .album-controls{-webkit-box-align:center;-ms-flex-align:center;align-items:center;-ms-flex-pack:distribute;justify-content:space-around;-ms-flex-line-pack:center;align-content:center;text-align:center;display:-webkit-box;display:-ms-flexbox;display:flex;height:100%}.metainfo{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center}.metainfo>*{min-height:2rem}.metainfo h4#title{font-weight:bold}h1.siteName{text-align:center;line-height:3rem;font-size:1.5rem;margin:0;color:#fff}.gitLink{position:absolute;top:0;right:1rem;font-size:2rem;color:#fff}body,html{overflow-x:hidden}body{padding:0;margin:0;font-family:Seravek,"Gill Sans Nova",Ubuntu,Calibri,"DejaVu Sans",source-sans-pro,sans-serif}.top-item{margin-top:100px}header{margin:0;width:100%;background-color:rgb(0,0,0);position:fixed;height:3rem;z-index:20;top:0;left:0}nav.stationNav{height:calc(100vh - 3rem);position:absolute;left:-1px;--stationWidth:clamp(20rem,19.293rem + 3.008vw,22rem);width:var(--stationWidth);-webkit-transform:translateX(calc(-1 * var(--stationWidth)));transform:translateX(calc(-1 * var(--stationWidth)));-webkit-transition:-webkit-transform 250ms ease-in-out;transition:-webkit-transform 250ms ease-in-out;transition:transform 250ms ease-in-out;transition:transform 250ms ease-in-out,-webkit-transform 250ms ease-in-out;border-left:1px solid #eee;background:rgba(0,0,0,0.85);padding-top:0.5rem;overflow-y:scroll}nav.stationNav label{background:#333;padding:0.4rem 0.5rem 0.4rem 1rem;font-size:clamp(1.2rem,1.13rem + 0.348vw,1.4rem);-webkit-transition:all 250ms ease-in-out;transition:all 250ms ease-in-out;color:#fff}nav.stationNav label:nth-child(odd){background:#393939}nav.stationNav label:has(input:checked){background:rgb(36,27,196);background:-webkit-gradient(linear,left top,right top,color-stop(39%,rgb(36,27,196)),color-stop(90%,rgb(146,11,181)));background:linear-gradient(90deg,rgb(36,27,196) 39%,rgb(146,11,181) 90%);padding:1rem 0.5rem 1rem 2rem;font-weight:700}nav.stationNav label input[type=radio]{display:none}input[type=checkbox]:checked~nav.stationNav{-webkit-transform:translateX(0);transform:translateX(0);z-index:40}input[type=checkbox]{-webkit-box-sizing:border-box;box-sizing:border-box;display:none;-webkit-transition:all 0.25s;transition:all 0.25s}.menuIconToggle{-webkit-box-sizing:border-box;box-sizing:border-box;cursor:pointer;position:absolute;z-index:40;height:100%;width:3rem;top:0;left:0;-webkit-transition:all 0.3s;transition:all 0.3s;padding:1rem 0.75rem 0.75rem}.menuIconToggle:focus,.menuIconToggle:hover{background:rgba(100,100,100,0.5)}.hamb-line{-webkit-box-sizing:border-box;box-sizing:border-box;position:absolute;height:3px;width:100%;background-color:#fff;-webkit-transition:all 0.25s;transition:all 0.25s}.hor{-webkit-transition:all 0.3s;transition:all 0.3s;-webkit-box-sizing:border-box;box-sizing:border-box;position:relative;float:left;margin-top:3px}.dia.part-1{position:relative;-webkit-box-sizing:border-box;box-sizing:border-box;float:left;-webkit-transition:all 0.25s;transition:all 0.25s}.dia.part-2{-webkit-box-sizing:border-box;box-sizing:border-box;position:relative;float:left;margin-top:3px;-webkit-transition:all 0.25s;transition:all 0.25s}input[type=checkbox]:checked~.menuIconToggle>.hor{-webkit-box-sizing:border-box;box-sizing:border-box;opacity:0;-webkit-transition:all 0.25s;transition:all 0.25s}input[type=checkbox]:checked~.menuIconToggle>.dia.part-1{-webkit-box-sizing:border-box;box-sizing:border-box;-webkit-transform:rotate(135deg);transform:rotate(135deg);margin-top:8px;-webkit-transition:all 0.25s;transition:all 0.25s}input[type=checkbox]:checked~.menuIconToggle>.dia.part-2{-webkit-box-sizing:border-box;box-sizing:border-box;-webkit-transform:rotate(-135deg);transform:rotate(-135deg);margin-top:-9px;-webkit-transition:all 0.25s;transition:all 0.25s}@media screen and (max-width:640px){nav.stationNav{--stationWidth:101vw}#metadata .album-controls{-webkit-box-align:unset;-ms-flex-align:unset;align-items:unset;-ms-flex-line-pack:unset;align-content:unset}#webamp{top:0}.metainfo{-webkit-box-pack:stretch;-ms-flex-pack:stretch;justify-content:stretch;padding:0!important;position:relative;padding-bottom:calc(0.5rem + env(safe-area-inset-bottom))}.metainfo #album,.metainfo #artist,.metainfo #title{max-width:80vw;margin:0.5rem 0 0;-ms-flex-line-pack:end;align-content:end}.metainfo a#radioName{border-radius:0;width:100%;display:block;margin-bottom:0!important;position:sticky;bottom:2rem;-ms-flex-item-align:end;align-self:flex-end}.metainfo p#stationLocation{display:block;width:100%;margin-bottom:0;background:rgba(0,0,0,0.5);-ms-flex-item-align:end;align-self:flex-end;position:sticky;bottom:0}}
+/*# sourceMappingURL=style.css.map */
