--- a/css/iconfont.css
+++ b/css/iconfont.css
@@ -32,7 +32,7 @@
 .icon-radio-station:before {
   content: "\e90d";
 }
-.icon-rotate:before {
+.icon-reload:before {
   content: "\e900";
 }
 .icon-shuffle:before {
