--- a/css/style.scss
+++ b/css/style.scss
@@ -362,6 +362,7 @@ body {
    flex-direction: column;
    align-items: center;
    justify-content: center;
+   text-wrap: balance;
 
    >* {
       min-height: 1.5rem;
