--- a/css/style.scss
+++ b/css/style.scss
@@ -17,6 +17,7 @@ body {
    min-height: 100dvh;
    min-height: -webkit-fill-available;
    font-size: clamp(16px, 15.296px + 0.188vw, 18px);
+   overflow:hidden;
 }
 
 /* Theme sombre ou clair */
@@ -76,17 +77,86 @@ body {
       right: 0;
       z-index: -1;
    }
+}
+
+.mobile-swipe {
+   display: contents;
+}
+
+
+@media screen and (min-width:640px) {
+
+   .off-canvas {
+     position: fixed;
+     top: 0;
+     bottom: 0;
+     transition: transform 0.3s ease-out, width 0.3s ease-out 0.3s;
+   }
+
+   .off-canvas-left {
+     left: 0;
+     transform: translateX(-100%);
+   }
+
+   .off-canvas-right {
+     right: 0;
+     transform: translateX(100%);
+   }
+
+   .off-canvas.show {
+     transform: translateX(0);
+   }
+
+   #panel2.grow {
+      transform:  none;
+      width: auto;
+   }
 
 }
 
-.panels {padding:0;}
+#togglePanels {
+   position: absolute;
+   top: 0;
+   right: 0;
+   border-radius: 0;
+   max-height: 4rem;
+
+   i {
+      font-size: 2.5rem;
+   }
+}
+
+.panels {
+   padding:0;
+   display: inline-block;
+}
+
+#panel2 {
+   transition: all .3s ease-in-out;
+   position: relative;
+
+   &.grow {
+      transform: translateX(-20%);
+      width: 100%;
+   }
+
+
+}
 
 .project-info {
    height: calc(100dvh - 4rem);
    position: relative;
    overflow-y: scroll;
-  scrollbar-color: rgba(255,255,255,.3) rgba(0,0,0,0);
-  scrollbar-width: thin;
+   scrollbar-color: rgba(255,255,255,.3) rgba(0,0,0,0);
+   scrollbar-width: thin;
+   opacity: 1;
+   left:0;
+   transition: all 0.3s ease-in-out;
+
+   &.off-canvas.show {
+      position:relative;
+   }
+
 
    a:not(.gitLink) {
      text-decoration: none;
@@ -342,19 +412,22 @@ body {
 #webamp {
    position: relative;
    top: -2rem;
+   transition: all .3s ease-in;
 }
 
 #metadata {
    height: calc(100dvh - 4rem);
+   display: flex;
 
-   .album-controls {
+   .playermeta {
       align-items: center;
       justify-content: space-around;
       align-content: center;
       text-align: center;
       display: flex;
       height: calc(100dvh - 4rem);
-      margin: 0;
+      max-width: 1400px;
+      margin: 0 auto;
    }
 
 }
@@ -373,6 +446,8 @@ body {
    h4#title {
       font-weight: bold;
    }
+
+
 
 }
 
@@ -445,57 +520,6 @@ input[type="checkbox"] {
    transition: all 0.25s;
 }
 
-.menuIconToggle {
-   box-sizing: border-box;
-   cursor: pointer;
-   position: absolute;
-   z-index: 40;
-   height: 100%;
-   width: 3rem;
-   top: 0;
-   left: 0;
-   transition: all 0.3s;
-   padding: 1rem .75rem .75rem;
-
-   &:hover,
-   &:focus {
-      background: rgba(100, 100, 100, .5)
-   }
-
-}
-
-.hamb-line {
-   box-sizing: border-box;
-   position: absolute;
-   height: 3px;
-   width: 100%;
-   background-color: #fff;
-   transition: all 0.25s;
-}
-
-.hor {
-   transition: all 0.3s;
-   box-sizing: border-box;
-   position: relative;
-   float: left;
-   margin-top: 3px;
-}
-
-.dia.part-1 {
-   position: relative;
-   box-sizing: border-box;
-   float: left;
-   transition: all 0.25s;
-}
-
-.dia.part-2 {
-   box-sizing: border-box;
-   position: relative;
-   float: left;
-   margin-top: 3px;
-   transition: all 0.25s;
-}
-
 input[type="checkbox"]:checked~.menuIconToggle {
    &>.hor {
       box-sizing: border-box;
@@ -520,13 +544,20 @@ input[type="checkbox"]:checked~.menuIconToggle {
 }
 
 @media screen and (max-width:640px) {
+
+   #togglePanels {display:none;}
+
    nav.stationNav {
       --stationWidth: 75vw;
    }
 
-   #metadata .album-controls {
-      align-items: unset;
-      align-content: unset;
+   #metadata { 
+      display:block;
+
+      .album-controls {
+         align-items: unset;
+         align-content: unset;
+      }
    }
 
    #webamp {
@@ -550,7 +581,7 @@ input[type="checkbox"]:checked~.menuIconToggle {
      scroll-snap-type: x mandatory;
      -webkit-overflow-scrolling: touch;
 
-     & > * {
+     & > .panels {
       scroll-snap-align: start;
      }
    }
