--- a/css/style.scss
+++ b/css/style.scss
@@ -257,6 +257,11 @@ body {
       }
    }
   }
+
+  #lastfm-auth {background:hsl(0 93.4% 52.4%); border:0; padding: .75rem; margin-bottom: 1rem;
+      &:hover {background: hsl(0 93.4% 40%);
+      }
+   }
 }
 
 #player {
@@ -419,6 +424,8 @@ body {
       }
 
    }
+
+   time {display:none;}
 
    .media-controls-wrapper {
       width: 100%;
@@ -637,10 +644,10 @@ input[type="checkbox"]:checked~.menuIconToggle {
       top: 0;
       height: fit-content;
       overflow: revert;
+      width: 100vw;
 
       #albumArt {
          max-width: 100vw;
-
          mask-image: -webkit-gradient(linear, left top, left bottom, 
       color-stop(0.00,  rgba(0,0,0,1)),
       color-stop(0.8,  rgba(0,0,0,.9)),
@@ -676,6 +683,7 @@ input[type="checkbox"]:checked~.menuIconToggle {
       position: relative;
       margin-bottom: 1rem;
       align-self: end;
+      width: 100vw;
 
       p {
          max-width: 85vw;
