--- a/css/style.scss
+++ b/css/style.scss
@@ -258,7 +258,7 @@ body {
    }
   }
 
-  #lastfm-auth {background:hsl(0 93.4% 52.4%); border:0; padding: .75rem; margin-bottom: 1rem;
+  #lastfm-auth {background:hsl(0 93.4% 52.4%); border:0; padding: .75rem; margin-bottom: 1rem; color:#fff;
       &:hover {background: hsl(0 93.4% 40%);
       }
    }
