--- a/css/style.scss
+++ b/css/style.scss
@@ -658,6 +658,7 @@ input[type="checkbox"]:checked~.menuIconToggle {
       height: fit-content;
       overflow: revert;
       width: 100vw;
+      min-width:400px;
 
       #albumArt {
          max-width: 100vw;
@@ -697,6 +698,7 @@ input[type="checkbox"]:checked~.menuIconToggle {
       margin-bottom: 1rem;
       align-self: safe;
       width: 100vw;
+      min-width:400px;
 
       p {
          max-width: 85vw;
