--- a/css/style.scss
+++ b/css/style.scss
@@ -701,8 +701,14 @@ input[type="checkbox"]:checked~.menuIconToggle {
       overflow: revert;
       width: 100vw;
       min-width:400px;
+      border:0;
+      mask-image: -webkit-gradient(linear, left top, left bottom, 
+      color-stop(0.00,  rgba(0,0,0,1)),
+      color-stop(0.8,  rgba(0,0,0,.9)),
+      color-stop(1.00,  rgba(0,0,0,0)));
 
       #albumArt {
+         opacity:0;
          max-width: 100vw;
          mask-image: -webkit-gradient(linear, left top, left bottom, 
       color-stop(0.00,  rgba(0,0,0,1)),
@@ -736,7 +742,8 @@ input[type="checkbox"]:checked~.menuIconToggle {
    .metainfo {
       justify-content: stretch;
       padding: 0 !important;
-      position: relative;
+      position: absolute;
+      bottom:0;
       margin-bottom: 1rem;
       align-self: safe;
       width: 100vw;
