--- a/css/style.scss
+++ b/css/style.scss
@@ -816,6 +816,9 @@ input[type="checkbox"]:checked~.menuIconToggle {
    padding-bottom: 2.5rem;
   }
 
+  .metainfo {
+   margin-bottom: 2.5rem;
+  }
 
 }
 
